chore: Fix dark mode for combobox

--- a/app/assets/stylesheets/hw_combobox.css
+++ b/app/assets/stylesheets/hw_combobox.css
@@ -1,14 +1,14 @@
 :root,
 :host,
 .wa-theme-default-light {
-  --hw-active-bg-color: #F3F4F6;
+  --hw-active-bg-color: var(--wa-color-neutral-fill-quiet);
   --hw-border-color: var(--wa-color-neutral-border-loud);
   --hw-group-color: #57595C;
   --hw-group-bg-color: #FFFFFF;
   --hw-invalid-color: #EF4444;
   --hw-dialog-label-color: #1D1D1D;
   --hw-focus-color: #2563EB;
-  --hw-option-bg-color: #FFFFFF;
+  --hw-option-bg-color: var(--wa-color-neutral-fill-loud);
 
   --hw-border-radius: 0.375rem;
   --hw-border-width--slim: 1px;
@@ -47,6 +47,16 @@
   --hw-selection-chip-font-size: 0.875rem;
 
   --hw-visual-viewport-height: 100vh;
+}
+
+.wa-theme-default-dark {
+  --hw-active-bg-color: var(--wa-color-neutral-fill-normal);
+  --hw-border-color: var(--wa-color-neutral-border-loud);
+  --hw-group-color: #57595C;
+  --hw-group-bg-color: #FFFFFF;
+  --hw-invalid-color: #EF4444;
+  --hw-dialog-label-color: #1D1D1D;
+  --hw-focus-color: #2563EB;
 }
 
 .hw-combobox {
